# Team-011A-Backend

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
tourism/: local_settings.example  settings.py
