[tool.poetry]
name = "team-011a-backend"
version = "0.1.0"
description = "Travel and tourism agency"
authors = ["Ousseynou Diop <xaralaxarala@gmail.com>", "You <You@mail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
psycopg2 = "2.8.5"
psycopg2-binary = "^2.8.5"
django-allauth = "^0.42.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
